# NuRaft

./: CMakeListsUbuntu.txt  PostProcessing.ipynb  commands.txt  commands_project.txt  gcp_ips.txt  gcp_run.ipynb  prepare_gcp.sh
.ipynb_checkpoints/: gcp_run-checkpoint.ipynb
examples/: CMakeLists.txt  example_custom.hxx  example_project.hxx
examples/project_ops/: project_server.cxx  project_state_machine.hxx
examples/set_ops/: set_server.cxx  set_state_machine.hxx
examples/stack_ops/: stack_server.cxx  stack_state_machine.hxx
